--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Scaled Agile DevOps Maturity Framework
-email: us@escaledagiledevops.com
+plugins_dir: ./_plugins
+jekyll_get:
+  - data: github
+    json: 'https://api.github.com/users/bdfinst/repos'
+    cache: false
+title: Scaled Agile Devops
+email: bdfinst@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Enterprise transformation without the messy culture change.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: bryanfinster
+github_username:  bdfinst
 
 # Build settings
 markdown: kramdown
