--- a/travis.yml
+++ b/travis.yml
@@ -5,6 +5,10 @@ branches:
   - release
 script:
   - JEKYLL_ENV=production bundle exec jekyll build --destination site
+install:
+  - rvm @global do gem uninstall bundler -x
+  - gem install bundler -v '~> 2.0.1' 
+  - bundle install
 deploy:
   provider: pages
   local-dir: ./site
