--- a/travis.yml
+++ b/travis.yml
@@ -1,5 +1,8 @@
 language: ruby
 cache: bundler
+before_install:
+    - gem update --system
+    - gem install bundler
 branches:
   only:
   - release
