--- a/travis.yml
+++ b/travis.yml
@@ -3,6 +3,7 @@ cache: bundler
 before_install:
     - gem update --system
     - gem install bundler
+    - bundle update --bundler
 branches:
   only:
   - release
