Change to minimal-mistakes theme

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  bdfinst
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
