Revert to old theme

--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,22 @@ github_username:  bdfinst
 
 # Build settings
 markdown: kramdown
-theme: minimal-mistakes-jekyll
+theme: minima
 plugins:
   - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
